--- a/config_sample.env
+++ b/config_sample.env
@@ -55,6 +55,12 @@ MEGA_EMAIL_ID = ""
 MEGA_PASSWORD = ""
 # Buttons
 VIEW_LINK = ""
+BUTTON_FOUR_NAME = ""
+BUTTON_FOUR_URL = ""
+BUTTON_FIVE_NAME = ""
+BUTTON_FIVE_URL = ""
+BUTTON_SIX_NAME = ""
+BUTTON_SIX_URL = ""
 # Torrent Search
 SEARCH_API_LINK = ""
 SEARCH_LIMIT = ""
