--- a/config_sample.env
+++ b/config_sample.env
@@ -53,6 +53,8 @@ NETRC_URL = ""
 MEGA_API_KEY = ""
 MEGA_EMAIL_ID = ""
 MEGA_PASSWORD = ""
+# GDTOT COOKIE
+CRYPT = ""
 # Buttons
 VIEW_LINK = ""
 BUTTON_FOUR_NAME = ""
