Major Update from MLTB Official

--- a/config_sample.env
+++ b/config_sample.env
@@ -37,7 +37,6 @@ CUSTOM_FILENAME = ""
 BASE_URL_OF_BOT = ""
 SERVER_PORT = ""
 WEB_PINCODE = ""
-QB_SEED = ""
 # RSS
 RSS_DELAY = ""
 RSS_COMMAND = ""
@@ -53,6 +52,8 @@ NETRC_URL = ""
 MEGA_API_KEY = ""
 MEGA_EMAIL_ID = ""
 MEGA_PASSWORD = ""
+# GDTOT Crypt
+CRYPT = ""
 # Buttons
 VIEW_LINK = ""
 BUTTON_FOUR_NAME = ""
